tests/neg/inline-error-pos.check
-- Error: tests/neg/inline-error-pos.scala:8:13 ------------------------------------------------------------------------
8 |  val b = foo(2) // error
  |          ^^^^^^
  |          cannot reduce inline match with
  |           scrutinee:  2 : (2 : Int)
  |           patterns :  case 1
  | This location contains code that was inlined from inline-error-pos.scala:3
